--- a/src/Admin_Pages/Dashboard_Page/dashboard.css
+++ b/src/Admin_Pages/Dashboard_Page/dashboard.css
@@ -71,7 +71,7 @@
     margin-top: 30px;
     margin-bottom: 30px;
     width: 100%;
-    height:200px;
+    height:140px;
     display: flex;
     justify-content: space-between;
 }
@@ -128,12 +128,15 @@
     font-weight: 1000;
 }
 .admin_content .admin_main_content > .container .statistics{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: #ffff;
     margin-top: 20px;
     margin-bottom: 30px;
-    width: 100%;
+    width: 98%;
     height:auto;
     display: flex;
     justify-content: space-between;
+    padding: 1%;
 }
 
 
