--- a/src/Admin_Pages/Dashboard_Page/dashboard.css
+++ b/src/Admin_Pages/Dashboard_Page/dashboard.css
@@ -76,6 +76,9 @@
     justify-content: space-between;
 }
 .admin_content .admin_main_content > .container  .box_stats .container{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     width: 48%;
     height: 100%;
     background-color: #FFFFFF;
@@ -83,10 +86,10 @@
     border-radius: 8px;
     display: flex;
     transition: .3s ease;
+    overflow: hidden;
 }
 .admin_content .admin_main_content > .container  .box_stats .container:hover{
     cursor: pointer;
-    background-color: #dce8f7;
     margin-top: -15px;
 }
 .admin_content .admin_main_content > .container  .box_stats .container .left{
@@ -97,8 +100,8 @@
     justify-content: center;
 }
 .admin_content .admin_main_content > .container  .box_stats .container .left img{
-    height: auto;
-    width: 45%;
+    height: 100%;
+    width: auto;
 }
 .admin_content .admin_main_content > .container  .box_stats .container .right{
     width: 60%;
@@ -106,18 +109,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 1;
 }
 .admin_content .admin_main_content > .container  .box_stats .container .right p:nth-child(1){
     font-size: 1.3rem;
     font-weight: 800;
-    margin-right: 10px;
+    margin-left: 50px;
     line-height: 1.3;
 }
 .admin_content .admin_main_content > .container  .box_stats .container .right p:nth-child(2){
     font-size: 3rem;
     font-weight: 600;
-    margin-right: 10px;
-    color: #336CFB;
+    margin-left: 50px;
+    color: #ffff;
     line-height: 1.3;
 }
 
@@ -142,6 +146,12 @@
 
 /*RESPONSIVE*/
 @media screen and (max-width: 851px) {
+    .admin_content{
+        overflow-y: hidden;
+    }
+    .admin_content .admin_main_content{
+        width: 100%;
+    }
     .admin_content .admin_main_content > .container  .box_stats{
         height:auto;
         flex-direction: column;
@@ -150,6 +160,7 @@
         width: 100%;
         height: 130px;
         margin-bottom: 20px;
+        overflow: hidden;
     }
     .admin_content .admin_main_content > .container  .box_stats .container .right p:nth-child(1){
         font-size: 1rem;
