--- a/src/Admin_Pages/Dashboard_Page/dashboard.css
+++ b/src/Admin_Pages/Dashboard_Page/dashboard.css
@@ -41,6 +41,7 @@
     font-size: 2rem;
     margin-bottom: 20px;
     font-weight: 1000;
+    line-height: 1.1;
 }
 .admin_content .admin_main_content > .container .image_banner{
     height: 180px;
