--- a/src/Admin_Pages/Schedule_Page/Schedule.css
+++ b/src/Admin_Pages/Schedule_Page/Schedule.css
@@ -119,6 +119,160 @@
     margin: 0 13px;
 }
 
+.admin_content .admin_main_content > .container .header_table{
+    height: auto;
+    width: 94%;
+    padding: 10px 3%;
+    background-color: #eeeefb;
+    display: flex;
+}
+.admin_content .admin_main_content > .container .header_table .header1{
+    height: 50px;
+    width: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.admin_content .admin_main_content > .container .header_table .header1 input[type="checkbox"]{
+    transform: scale(1.5);
+    margin-left: 6px;
+}
+.admin_content .admin_main_content > .container .header_table .header2{
+    height: 50px;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.admin_content .admin_main_content > .container .header_table .header3{
+    height: 50px;
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.admin_content .admin_main_content > .container .header_table .header4{
+    height: 50px;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.admin_content .admin_main_content > .container .header_table .header5{
+    height: 50px;
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.admin_content .admin_main_content > .container .header_table .header5 .header_status{
+    background-color: #f8edc3;
+    color: #E2AB1D;
+    font-size: .9rem;
+    font-weight: 700;
+    border-radius: 10px;
+    padding: 5px 15px;
+    margin-left: 10px;
+}
+.admin_content .admin_main_content > .container .header_table .header6{
+    height: 50px;
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.admin_content .admin_main_content > .container .header_table .header_span{
+    font-size: 1rem;
+    margin: 0 10px;
+    text-align: center;
+}
+
+.admin_content .admin_main_content > .container .header_body{
+    height: 415px;
+    width: 94%;
+    padding: 10px 3%;
+    border-radius: 5px;
+    background: #ffff;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    overflow-y: scroll;
+    flex-direction: column;
+}
+.admin_content .admin_main_content > .container .header_body::-webkit-scrollbar-track{
+	background-color: transparent;
+}
+.admin_content .admin_main_content > .container .header_body::-webkit-scrollbar{
+	width: 5px;
+	background-color: transparent;
+}
+.admin_content .admin_main_content > .container .header_body::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #b9b9f8;
+}
+.admin_content .admin_main_content > .container .header_body .table_tr{
+    display: flex;
+}
+.admin_content .admin_main_content > .container .header_body .table_tr #action_table_btn:hover{
+    cursor: pointer;
+    color: #4D77FF;
+}
+
+.admin_content .admin_main_content > .container .bottom_sched{
+    margin-top: 20px;
+    min-height: 35px;
+    width: 100%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: transparent;
+}
+.admin_content .admin_main_content > .container .bottom_sched p{
+    font-size: 1rem;
+    font-weight: 700;
+}
+.admin_content .admin_main_content > .container .bottom_sched .btn{
+    display: none;
+    justify-content: flex-end;
+    align-items: center;
+}
+.admin_content .admin_main_content > .container .bottom_sched .btn button{
+    font-size: 1rem;
+    padding: 5px 10px;
+    border: none;
+}
+.admin_content .admin_main_content > .container .bottom_sched .btn button:hover{
+    cursor: pointer;
+    opacity: 80%;
+}
+.admin_content .admin_main_content > .container .bottom_sched .btn button:nth-child(1){
+    margin-right: 10px;
+    background-color: rgb(248, 85, 85);
+    color: #ffff;
+    border-radius: 5px;
+}
+.admin_content .admin_main_content > .container .bottom_sched .btn button:nth-child(2){
+    background-color: #4D77FF;
+    color: #ffff;
+    border-radius: 5px;
+}
+
+
+.no_schedule_available{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.no_schedule_available img{
+    height: 150px;
+}
+.no_schedule_available p{
+    margin-top: 10px;
+    font-weight: 600;
+}
 
 /*RESPONSIVE*/
 @media screen and (max-width: 851px) {
@@ -127,6 +281,7 @@
     }
     .admin_content .admin_main_content{
         width: 100%;
+        overflow-x: hidden;
     }
     .admin_content .admin_main_content > .container  .box_stats{
         height:auto;
@@ -144,4 +299,90 @@
     .admin_content .admin_main_content > .container  .box_stats .container .right p:nth-child(2){
         font-size: 2.5rem;
     }
+    .admin_content .admin_main_content > .container .header_table .header1{
+        width: 10%;
+    }
+    .admin_content .admin_main_content > .container .header_table .header2{
+        width: 20%;
+    }
+    .admin_content .admin_main_content > .container .header_table .header3{
+        width: 30%;
+    }
+    .admin_content .admin_main_content > .container .header_table .header4{
+        display: none;
+    }
+    .admin_content .admin_main_content > .container .header_table .header5{
+        width: 20%;
+    }
+    .admin_content .admin_main_content > .container .header_table .header6{
+        width: 20%;
+    }   
+    .admin_content .admin_main_content > .container .header_table .header_span{
+        font-size: .9rem;
+        margin: 0 10px;
+        text-align: center;
+    }
+    
+}
+
+@media screen and (max-width: 501px) {
+    .admin_content .admin_main_content > .container .schedule_top .search_container, .filter_date{
+        width: 85%;
+    }
+    .admin_content .admin_main_content > .container .header_table .header1{
+        display: none;
+    }
+    .admin_content .admin_main_content > .container .header_table .header2{
+        width: 70%;
+        justify-content: flex-start;
+    }
+    .admin_content .admin_main_content > .container .header_table .header3{
+        display: none;
+    }
+    .admin_content .admin_main_content > .container .header_table .header4{
+        display: none;
+    }
+    .admin_content .admin_main_content > .container .header_table .header5{
+        display: none;
+    }
+    .admin_content .admin_main_content > .container .header_table .header6{
+        width: 30%;
+    }
+    .admin_content .admin_main_content > .container .header_body{
+        margin-bottom: 30px;
+    }
+
+
+    .admin_content .admin_main_content > .container .bottom_sched{
+        margin-top: -10px;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .admin_content .admin_main_content > .container .bottom_sched p{
+        font-size: 1rem;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+    .admin_content .admin_main_content > .container .bottom_sched .btn{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    .admin_content .admin_main_content > .container .bottom_sched .btn button{
+        font-size: 1rem;
+        padding: 5px 10px;
+        border: none;
+    }
+    .admin_content .admin_main_content > .container .bottom_sched .btn button:nth-child(1){
+        margin-right: 10px;
+        background-color: rgb(248, 85, 85);
+        color: #ffff;
+        border-radius: 5px;
+    }
+    .admin_content .admin_main_content > .container .bottom_sched .btn button:nth-child(2){
+        background-color: #4D77FF;
+        color: #ffff;
+        border-radius: 5px;
+    }
+    
 }
