--- a/src/Admin_Pages/Schedule_Page/Schedule.css
+++ b/src/Admin_Pages/Schedule_Page/Schedule.css
@@ -465,6 +465,48 @@ body{
     color: #696CFF;
 }
 
+/*SPEECH MODAL*/
+.speech_Modal{
+    height: 100vh;
+    width: 100%;
+    background-color: #ffffff;
+    position: fixed;
+    inset: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+.speech_Modal .close_speech{
+    font-size: 2.3rem;
+    font-weight: 600;
+    position: fixed;
+    right: 2%;
+    top: 1%;
+    z-index: 99999999999;
+}
+.speech_Modal .close_speech:hover{
+    cursor: pointer;
+    opacity: 80%;
+}
+.speech_Modal #speak_text{
+    font-size: 2rem;
+    color: rgb(103, 103, 103);
+    margin-right: 140px;
+    transition: .3s ease;
+}
+.speech_Modal #speak_text:first-letter {
+    text-transform: uppercase;
+}
+.speech_Modal img{
+    height: 200px;
+    width: auto;
+    transition: .3s ease;
+}
+
+
+
+
 /*RESPONSIVE*/
 @media screen and (max-width: 851px) {
     .admin_content{
