--- a/src/Assets/Styles/global.css
+++ b/src/Assets/Styles/global.css
@@ -8,6 +8,18 @@
     -ms-user-select: none;
     font-family: 'Manrope', sans-serif;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 html{
     scroll-behavior: smooth;
 }
