--- a/src/Modals/modal.css
+++ b/src/Modals/modal.css
@@ -99,9 +99,6 @@
     width: 100%;
     height: 45px;
     border-top: 1px solid rgb(216, 214, 214);
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
 }
 .delete_task_container > .bottom_modal button{
     font-size: 1rem;
@@ -109,14 +106,28 @@
     padding: 5px 10px;
     border: none;
     border-radius: 5px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+.delete_task_container > .bottom_modal button span{
+    margin-top: -.5px;
 }
 .delete_task_container > .bottom_modal button[type="button"]{
     background-color: rgb(235, 234, 234);
+    height: 35px;
+    float: right;
 }
 .delete_task_container > .bottom_modal button[type="submit"]{
     margin-left: 10px;
     background-color: #ff4560;
     color: #ffff;
+    width: 100px;
+    height: 35px;
+    margin-bottom: 0;
+    float: right;
 }
 .delete_task_container > .bottom_modal button:hover{
     opacity: 80%;
