--- a/src/Admin_Pages/Vaccine_Page/Vaccine.css
+++ b/src/Admin_Pages/Vaccine_Page/Vaccine.css
@@ -550,8 +550,6 @@ body{
     justify-content: center;
     margin-right: 20px;
 }
-
-
 .edit_container .bottom{
     flex-grow: 1;
     width: 100%;
@@ -651,6 +649,238 @@ body{
     justify-content: center;
 }
 
+
+/*Add Vaccine*/
+.add_vaccine_container{
+    width: 90%;
+    padding: 3% 5%;
+    height: auto;
+    background-color: #FFFFFF;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 8px;
+}
+.add_vaccine_container .top{
+    width: 100%;
+    height: auto;
+    display: flex;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #4D77FF;
+}
+.add_vaccine_container .top .image_container{
+    height: 250px;
+    width: 250px;
+    border-radius: 5px;
+    border: 1px dashed #626F75;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.add_vaccine_container .top .image_container #upload_photo_btn{
+    color: #4D77FF;
+    font-size: .9rem;
+    font-weight: 600;
+    margin: 0 10px;
+    margin-top: 5px;
+    text-align: center;
+}
+.add_vaccine_container .top .image_container #upload_photo_btn:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.add_vaccine_container .top .image_container .notes{
+    margin-top: 20px;
+}
+.add_vaccine_container .top .image_container .notes > p:nth-child(1){
+    color: #6F727A;
+    font-size: .9rem;
+    font-weight: 400;
+    margin: 0 10px;
+}
+.add_vaccine_container .top .image_container .notes > p:nth-child(2){
+    color: #6F727A;
+    font-size: .9rem;
+    font-weight: 400;
+    margin: 0 10px;
+}
+.add_vaccine_container .top .image_container .notes > p:nth-child(3){
+    color: #6F727A;
+    font-size: .9rem;
+    font-weight: 400;
+    margin: 0 10px;
+}
+.add_vaccine_container .top .image_container .notes > p:nth-child(4){
+    color: #6F727A;
+    font-size: .9rem;
+    font-weight: 400;
+    margin: 0 10px;
+}
+.add_vaccine_container .top .image_container #vaccine_add_img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    display: none;
+}
+.add_vaccine_container .top .image_container .cancel_btn{
+    margin-top: -100%;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.412);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.add_vaccine_container .top .image_container .cancel_btn > div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 800;
+    color: #ffff;
+    border-bottom: 1px solid transparent;
+}
+.add_vaccine_container .top .image_container .cancel_btn > div:hover{
+    cursor: pointer;
+    border-bottom: 1px solid white;
+}
+.add_vaccine_container .top .right{
+    flex-grow: 1;
+    margin-left: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.add_vaccine_container .label{
+    font-size: 1.2rem;
+    color: #000000;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.add_vaccine_container .input_top{
+    border:2px solid #b9c5d2;
+    font-size: 1rem;
+    padding: 7px 0;
+    width: 70%;
+    font-weight: 500;
+    outline-color: #4D77FF;
+    text-indent: 10px;
+    border-radius: 10px;
+}
+.add_vaccine_container textarea{
+    border:2px solid #b9c5d2;
+    resize: none;
+    height: 100px;
+    font-size: 1rem;
+    padding: 10px 2%;
+    font-weight: 500;
+    outline-color: #4D77FF;
+    border-radius: 10px;
+}
+.add_vaccine_container .flex_bot{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.add_vaccine_container .flex_bot .box{
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+}
+.add_vaccine_container .flex_bot .box label{
+    font-size: 1.2rem;
+    color: #000000;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.add_vaccine_container .flex_bot .box input{
+    width: 100%;
+}
+
+.add_vaccine_container .button{
+    margin-top: 30px;
+    width: 100%;
+    border: 2px solid transparent;
+    height: 45px;
+}
+.add_vaccine_container .button button{
+    height: 40px;
+    width: 250px;
+    float: right;
+    background-color: #4D77FF;
+    border: none;
+    color: #ffff;
+    font-size: 1rem;
+    font-weight: 700;
+    border-radius: 5px;
+    transition: .3s ease;
+}
+.add_vaccine_container .button button:hover{
+    opacity: 90%;
+}
+
+/*Success Slide Modal*/
+.success_addVaccine_modal{
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.381);
+    position: fixed;
+    inset: 0;
+    z-index: 101;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.success_vax_container{
+    width: 500px;
+    height: auto;
+    margin: 0 5%;
+    padding: 30px 0;
+    background-color: #ffff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.success_vax_container img{
+    height: 80px;
+    width: 80px;
+    padding: 30px;
+    object-fit: cover;
+    background-color: #ebeaea;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}.success_vax_container p{
+    font-size: 1rem;
+    margin: 0 20px;
+    text-align: center;
+}
+.success_vax_container .head_text{
+    text-align: center;
+    margin-top: 10px;
+    font-size: 2rem;
+    font-weight: 800;
+    margin: 0 20px;
+}
+.success_vax_container button{
+    border-radius: 5px;
+    width: 150px;
+    padding: 8px 0;
+    font-size: 1rem;
+    background-color: #4D77FF;
+    color: #ffff;
+    border: none;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.success_vax_container button:hover{
+    opacity: 90%;
+}
+
+
 /*RESPONSIVE*/
 @media screen and (max-width: 851px) {
     .admin_content{
@@ -680,11 +910,10 @@ body{
     
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 650px) {
     .view_vaccine_container .view_container{
         width: 100%;
     }
-
 
     .view_container .top .first img{
         height: 25px;
@@ -735,4 +964,108 @@ body{
     .view_container .bottom .content .flex_bot .box{
         width: 100%;
     }
+
+    .edit_vaccine_container .edit_container{
+        width: 100%;
+    }
+    .edit_container .top .first img{
+        height: 25px;
+    }
+    .edit_container .top .first p{
+        line-height: 1.1;
+        margin: 0;
+        font-size: 1.3rem;
+        font-weight: 800;
+        white-space: nowrap;
+    }
+    .edit_container .top .second{
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .edit_container .top .second .left{
+        width: 100%;
+        height: auto;
+        justify-content: center;
+    }
+    .edit_container .top .second .right{
+        margin-top: 10px;
+        width: 100%;
+        height: auto;
+    }
+    .edit_container .top .second .right .upload_btn{
+        padding: 5px 0;
+    }
+    .edit_container .top .second .right .remove_btn{
+        padding: 5px 0;
+    }
+
+    .edit_container .bottom{
+        margin-top: 20px;
+    }
+    .edit_container .bottom .content .flex_bot{
+        flex-direction: column;
+    }
+    .edit_container .bottom .content .flex_bot .box{
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .edit_container .bottom .content .flex_bot .box:last-child{
+        margin-bottom: 0;
+    }
+    .edit_container .bottom .content .flex_bot .box input{
+        width: 100%;
+    }
+
+    .add_vaccine_container{
+        padding: 30px 10%;
+        width: 80%;
+    }
+    .add_vaccine_container #upload_img_icon{
+        display: none;
+    }
+    .add_vaccine_container .top{
+        flex-direction: column;
+    }
+    .add_vaccine_container .top .image_container{
+        height: 180px;
+        width: 180px;
+        margin: 0% auto;
+        margin-bottom: 20px;
+    }
+    .add_vaccine_container .top .right{
+        margin-left: 0;
+    }
+    .add_vaccine_container .label{
+        font-size: 1rem;
+        color: #000000;
+        font-weight: 700;
+        margin-bottom: 5px;
+    }
+    .add_vaccine_container .input_top{
+        font-size: .9rem;
+        width: 100%;
+    }
+
+    .add_vaccine_container .flex_bot{
+        margin-top: 0 !important;
+        flex-direction: column;
+    }
+    .add_vaccine_container .flex_bot .box{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .add_vaccine_container .flex_bot .box label{
+        margin-top: 20px;
+        font-size: 1rem;
+    }
+    .add_vaccine_container .flex_bot .box input{
+        width: 100%;
+    }
+    .add_vaccine_container .button button{
+        width: 100%;
+    }
+    
 }
